# telegram_bot

./: .env.example  .gitignore  .pylintrc  pyproject.toml
bot/: main.py
config/: settings.py
sports/: admin.py  models.py
sports/migrations/: 0001_initial.py
