[project]
name = "telegram-bot"
version = "0.1.0"
description = "Сервис для поиска секций"
authors = [
    {name = "GrigoryKalinin",email = "GrigoryKalinin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "pylint-django (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
